--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 /bin/
 /.DS_Store
 /.idea/
+/ch3/bin/
+/ch4/bin/
+/ch5/bin/
+/ch6/bin/
+/ch7/bin/
+/ch8/bin/
+/ch9/bin/
+/ch10/bin/
+/ch11/bin/
+/ch12/bin/
