--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
 /.vscode/
 /bin/
 /.DS_Store
 /.idea/
-/ch3/bin/
-/ch4/bin/
-/ch5/bin/
-/ch6/bin/
-/ch7/bin/
-/ch8/bin/
-/ch9/bin/
-/ch10/bin/
-/ch11/bin/
-/ch12/bin/
+/*/bin/
